--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "covid19-employment-solutions",
+  "homepage": "http://jordisman.github.io/Women2Work",
+  "name": "women-2-work",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -22,7 +23,9 @@
     "build": "react-scripts build",
     "watch": "npm-watch",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "watch": {
     "build": "src/"
@@ -41,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^2.2.0"
   }
 }
