--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://jordisman.github.io/Women2Work",
+  "homepage": "http://lindentree.github.io/Women2Work",
   "name": "women-2-work",
   "version": "0.1.0",
   "private": true,
