react-create-app on Heroku

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "http://lindentree.github.io/Women2Work",
-  "name": "women-2-work",
+  "name": "Women2Work",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
