--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://lindentree.github.io/Women2Work",
+  "homepage": ".",
   "name": "Women2Work",
   "version": "0.1.0",
   "private": true,
@@ -21,6 +21,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "build-localhost": "PUBLIC_URL=/ react-scripts build",
     "watch": "npm-watch",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
