--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://lindentree.github.io/Women2Work",
+  "homepage": "http://lindentree.github.io/Women2Work",
   "name": "Women2Work",
   "version": "0.1.0",
   "private": true,
